Fix-Scrollbar

--- a/public/css/override.css
+++ b/public/css/override.css
@@ -3,6 +3,10 @@
     --sidebar-background-color: rgb(0, 0, 0);
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 .btn-link {
     --bs-btn-color: #ffffff;
     --bs-btn-hover-color: #ee2e24;
